# efficient-eval-really

./: .gitignore  README.md  papers.toml  pyproject.toml
efficient_eval_really/: utils.py
efficient_eval_really/data/: __init__.py
efficient_eval_really/methods/: __init__.py  evaluation_bandit.py  subset2evaluate.py
scripts/: 01-run_all.py
